# cccApp

./: .env.example  .gitignore  README.md  do-pull.ts  git-check.ts  index.html  localToolConfig.types.ts  manual-pull.ts  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/adapters/inference/: ollama.py
backend/app/adapters/trainer/: __init__.py  base.py  llamafactory.py  swift.py
backend/app/api/routes/: __init__.py  experiments.py  health.py  runs.py
backend/app/core/: config.py  ids.py  json_utils.py  subprocess_utils.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/reports/: run_report.py
backend/app/schemas/: common.py  experiments.py  runs.py
backend/app/services/: experiments.py  ollama_eval.py  runs.py
backend/app/workers/: poller.py
config/: app.example.yaml  paths.example.yaml  trainer.example.yaml
docs/: 01-project-structure.md  02-windows-llamafactory-setup.md  03-platform-scaffold.md  04-ollama-eval-format.md  05-h5-frontend-scaffold.md  06-end-to-end-smoke-test.md  07-ms-swift-preview-adaptation.md  08-llamafactory-phase1-windows-landing.md
examples/requests/: baseline_infer_alarm_eval.json  llamafactory_sft_alarm_train.json  swift_sft_alarm_analysis_qwen35_9b_base_preview.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
resources/: Qwen3.5-9B-Base动环告警诊断训练介绍.pptx  参考材料补充-训练.pptx
scripts/: cl-wrapper.cmd  generate_automation_pipeline_assets.py  generate_training_intro_pptx.py  lib-wrapper.cmd  msvc-env.cmd  prepare_alarm_analysis_datasets.py  rename_experiment_names_cn.py  repair_training_intro_ppt.py  run_ollama_eval.py  tauri-with-path.mjs
scripts/windows/: 00-apply-cache-env.ps1  01-init-layout.ps1  02-create-lf-venv.ps1  03-install-llamafactory.ps1  04-verify-lf.ps1  05-run-api.ps1  06-run-worker.ps1  07-install-backend.ps1  08-install-frontend.ps1  09-run-frontend.ps1  10-seed-sample-data.ps1  11-post-baseline-experiment.ps1  (+3 more)
src/: App.tsx  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: anthropic_proxy.rs  app_state.rs  chat.rs  claude_cli.rs  cli_session_store.rs  codex_cli.rs  gemini_cli.rs  git.rs  lib.rs  local_config.rs  main.rs  models.rs  openai_compatible_claude_bridge.rs  openai_compatible_claude_cli.rs  project_analysis.rs  text_decode.rs  workspace.rs  workspace_history.rs
vite/: localToolConfigPlugin.ts  readLocalToolConfigs.ts
动环告警诊断模型实验台/: README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+61 files in other folders)
