[package]
name = "ccc_app"
version = "0.1.0"
description = "CCC desktop application"
authors = ["Codex"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ccc_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
encoding_rs = "0.8"
futures-util = { version = "0.3", default-features = false }
gcp_auth = "0.12.6"
dirs = "6"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots", "system-proxy"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["time", "process", "io-util", "macros", "net", "sync", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "v5"] }
